--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
+    "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "^6.4.0",
     "@mui/x-charts": "^7.24.0",
     "@tanstack/react-query": "^5.64.1",
+    "framer-motion": "^12.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "6",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
